@@ -108,6 +108,45 @@ PDF: application/pdf
 (allows copy/paste of PDF)
 P.S. see if we can handle this as EMF ? (check if still needed anyway)
 
+#### For Java 14 distributions
+
+A branch of JSesh is being developped to use Java 14. What I currently do is :
+
+- get sure the PATH is correct (includes the jdk for java 14, and not a former one);
+- get sure JAVA_HOME is correct (it's used by Maven).
+
+Once JSesh is built, I have played with `jdeps` and `jlinks` to create the correct jre.
+
+I go to folder `jsesh-installer/target/mac/JSesh-7.5.0-SNAPSHOT/JSesh.app/Contents/lib`, and
+I build a shell script for jdeps:
+~~~sh
+JARS=bcmail-jdk14-138.jar:....:signInfoAppli-7.5.0-SNAPSHOT.jar:swing-layout-1.0.3.jar
+jdeps --ignore-missing-deps --list-deps -cp $JARS jseshAppli-7.5.0-SNAPSHOT.jar
+~~~
+where JARS is made from all jars in the folder. There are some missing dependencies related to mail, but JSesh doesn't use 
+mail, so it's not an issue.
+
+It gives me the list of modules needed by JSesh:
+~~~
+   java.base
+   java.datatransfer
+   java.desktop
+   java.logging
+   java.naming
+   java.prefs
+   java.sql
+   java.xml
+~~~
+
+I use this list to build and run the following script:
+~~~sh
+MODULES=java.base,java.datatransfer,java.desktop,java.logging,java.naming,java.prefs,java.sql,java.xml
+jlink --no-header-files --no-man-pages --add-modules  $MODULES --output jre
+~~~
+
+The resulting jre folder should be placed in Contents. The corresponding JRE is 75M large, which is smaller than the
+jre for 1.8 which was included in JSesh previously. This is not yet the master version, as I need to fix bugs.
+
 ------------------------------------
 ### Windows distribution
 
